--- a/o/of/off/officeautopilot.com.html
+++ b/o/of/off/officeautopilot.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the officeautopilot.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216022148id_/http%3A//officeautopilot.com/legal/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the officeautopilot.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616192057id_/http%3A//www.officeautopilot.com/legal/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head>
 
@@ -28,13 +28,16 @@
 
 <script src="http://www.officeautopilot.com/assets/js/swfobject.js" type="text/javascript"></script>
 <link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon">
-</head>
+<script type="text/javascript" charset="iso-8859-1" src="http://server.iad.liveperson.net/hcp/html/mTag.js?site=2746443"></script></head>
 <body id="secondary">
 <script src="http://moon-ray.com/tracking.js" type="text/javascript"></script>
 <script type="text/javascript">
 _mri = "3_75_3";
 mrtracking();
 </script>
+<!-- BEGIN LivePerson Monitor. --><script language="javascript"> var lpMTagConfig = {'lpServer' : "server.iad.liveperson.net",'lpNumber' : "2746443",'lpProtocol' : "http"}; function lpAddMonitorTag(src){if(typeof(src)=='undefined'||typeof(src)=='object'){src=lpMTagConfig.lpMTagSrc?lpMTagConfig.lpMTagSrc:'/hcp/html/mTag.js';}if(src.indexOf('http')!=0){src=lpMTagConfig.lpProtocol+"://"+lpMTagConfig.lpServer+src+'?site='+lpMTagConfig.lpNumber;}else{if(src.indexOf('site=')<0){if(src.indexOf('?')<0)src=src+'?';else src=src+'&';src=src+'site='+lpMTagConfig.lpNumber;}};var s=document.createElement('script');s.setAttribute('type','text/javascript');s.setAttribute('charset','iso-8859-1');s.setAttribute('src',src);document.getElementsByTagName('head').item(0).appendChild(s);} if (window.attachEvent) window.attachEvent('onload',lpAddMonitorTag); else window.addEventListener("load",lpAddMonitorTag,false);</script><!-- END LivePerson Monitor. -->
+
+
 <div id="page-wrap">
 
 <div id="logo"><a href="/" title="Home">OfficeAutopilot</a></div>
@@ -48,6 +51,8 @@ mrtracking();
 		<li><a title="Login" href="/login/">LOGIN</a></li>
 	</ul>
 </div>
+
+
 
 <div id="nav">
   	<ul>
@@ -92,11 +97,12 @@ mrtracking();
 			</div>
 
 			<div id="customer-quotes">
-			<p>"Thanks for all your help! I've got the "autopilot" bug now, and am constantly looking for ways to systemize everything. With any luck I'm going to automate my way out of a job soon..." <a href="http://www.officeautopilot.com/testimonials/zacadler/">read more</a></p>
+			<p>"And the customization your programmers have done for us has really solved some time-consuming problems. Thanks
+so much!" <a href="http://www.officeautopilot.com/testimonials/jomishega/">read more</a></p>
 <em>
-- Zac Adler<br>
-&nbsp;&nbsp;President<br>
-&nbsp;&nbsp;<a href="http://www.yourHA.com">yourHA.com</a>
+- Jomi Shega<br>
+&nbsp;&nbsp;Director of Marketing<br>
+&nbsp;&nbsp;<a href="http://www.lapbandsurgery.com">lapbandsurgery.com</a>
 </em>
 			</div>
 
