--- a/a/al/alm/alma-latina.net.html
+++ b/a/al/alm/alma-latina.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the alma-latina.net privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216011726id_/http%3A//www.alma-latina.net/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the alma-latina.net privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616192537id_/http%3A//www.alma-latina.net/privacy.shtml) for the most accurate reproduction.-->
 
 <html><head>
 <title>:::ALMA LATINA::: - Privacy Policy</title>
@@ -66,8 +66,7 @@ google_color_text = "8B4513";
 Latina</strong></font></p>
 <font face="Arial Narrow">
 
-</font><p align="left"><font face="Arial Narrow">Robichaud Enterprises has created this privacy statement in order to
-demonstrate our firm commitment to privacy. The following discloses our information
+</font><p align="left"><font face="Arial Narrow">The following discloses our information
 gathering and dissemination practices for this website: <a href="http://www.alma-latina.net">Alma Latina</a><br>
 <br>
 <strong>Information Collection and Use </strong><br>
@@ -98,7 +97,8 @@ information. All this information is collected solely for marketing purposes. Yo
 opt-out of collection of such information by turning cookies off on your computer.<br>
 <br>
 Some of our business partners use cookies on our site (for example, our advertisers).
-However, we have no access to or control over these cookies.<br>
+However, we have no access to or control over these cookies. Google, as a third party vendor, uses cookies to serve ads on your site. Google's use of the DART cookie enables it to serve ads to your users based on their visit to your sites and other sites on the Internet. Users may opt out of the use of the DART cookie by visiting the Google ad and content network privacy policy. 
+<br>
 <br>
 <strong>Security</strong><br>
 This website takes every precaution to protect our users' information. When users submit
@@ -155,7 +155,7 @@ document.write("usr=00139547P000");
 document.write("&refer="+escape(document.referrer)+"");
 document.write("&tips="+Math.random()+"");
 document.write("\" border=0></A>");
-//--></script><a href="http://top.addfreestats.com/cgi-bin/main.cgi?usr=00139547P000" target="_blank"><img src="http://www1.addfreestats.com/cgi-bin/connect.cgi?usr=00139547P000&amp;refer=&amp;tips=0.5312294546087781" border="0"></a><noscript><a
+//--></script><a href="http://top.addfreestats.com/cgi-bin/main.cgi?usr=00139547P000" target="_blank"><img src="http://www1.addfreestats.com/cgi-bin/connect.cgi?usr=00139547P000&amp;refer=&amp;tips=0.08663545184525656" border="0"></a><noscript><a
     href="http://top.addfreestats.com/cgi-bin/main.cgi?usr=00139547P000" target="_blank"><p
     align="center"><img
     src="http://www1.addfreestats.com/cgi-bin/connect.cgi?usr=00139547P000" border="0"
