--- a/l/la/lav/lavaplace.com.html
+++ b/l/la/lav/lavaplace.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the lavaplace.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217055933id_/http%3A//www.lavaplace.com/%3Fpage%3Dprivacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lavaplace.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616195138id_/http%3A//www.lavaplace.com/%3Fpage%3Dprivacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><title>Privacy &amp; Use Policy</title>
 <meta name="description" content="Privacy and Use Policy">
@@ -14,9 +14,10 @@
 <div id="gWrapper">
 <div id="header">
 <div id="logo">
-<a href="http://www.lavaplace.com/"><img src="http://images.lavaplace.com/images/lava_logo_valentine.gif" width="250" height="35" border="0" alt="LavaPlace Valentine Logo"></a><br>
-<img src="http://images.lavaplace.com/images/en_selected.gif" height="20" width="49" border="0" align="middle" alt="english selected"><a href="http://ru.lavaplace.com/?page=privacy_policy"><img src="http://images.lavaplace.com/images/ru.gif" height="20" width="67" align="middle" border="0" alt="select russian"></a></div> <!-- // logo -->
+<a href="http://www.lavaplace.com/"><img src="http://images.lavaplace.com/images/lava_logo_valentine.gif" width="250" height="35" border="0" alt="LavaPlace Valentine Logo"></a>
+</div> <!-- // logo -->
 <div id="banner">
+<div>english <a href="http://ru.lavaplace.com/?page=privacy_policy">по-русски</a> <a href="http://lt.lavaplace.com/?page=privacy_policy">lietuviškai</a></div>
 </div> <!-- // banner -->
 </div> <!-- // header -->
 <div id="mainmenu" class="trs"><a href="http://www.lavaplace.com/">Home</a>
@@ -169,7 +170,7 @@ We may use third-party advertising companies to serve ads on our behalf.&nbsp; I
 <td width="40%">
 <select name="s_gender">
 <option value="0">Woman</option>
-<option value="1">Man</option>
+<option value="1" selected="">Man</option>
 </select>
 </td>
 </tr>
@@ -178,7 +179,7 @@ We may use third-party advertising companies to serve ads on our behalf.&nbsp; I
 <td width="40%">
 <select name="s_looking_for">
 <option value="0">Woman</option>
-<option value="1" selected="">Man</option>
+<option value="1">Man</option>
 </select>
 </td>
 </tr>
@@ -186,9 +187,9 @@ We may use third-party advertising companies to serve ads on our behalf.&nbsp; I
 <td>between ages</td>
 <td>
 <select name="s_age_from">
-<option value="18">18</option>
+<option value="18" selected="">18</option>
 <option value="19">19</option>
-<option value="20" selected="">20</option>
+<option value="20">20</option>
 <option value="21">21</option>
 <option value="22">22</option>
 <option value="23">23</option>
@@ -263,7 +264,7 @@ We may use third-party advertising companies to serve ads on our behalf.&nbsp; I
 <option value="37">37</option>
 <option value="38">38</option>
 <option value="39">39</option>
-<option value="40" selected="">40</option>
+<option value="40">40</option>
 <option value="41">41</option>
 <option value="42">42</option>
 <option value="43">43</option>
@@ -322,7 +323,7 @@ We may use third-party advertising companies to serve ads on our behalf.&nbsp; I
 <option value="96">96</option>
 <option value="97">97</option>
 <option value="98">98</option>
-<option value="99">99</option>
+<option value="99" selected="">99</option>
 </select>
 </td>
 </tr>
@@ -339,6 +340,7 @@ We may use third-party advertising companies to serve ads on our behalf.&nbsp; I
 </div>
 <!-- Quick Search End -->
 
+
 	</div> <!-- side //-->
 </div> <!-- column-one //-->
 	</div> <!-- main //-->
@@ -353,19 +355,11 @@ escape(document.referrer)+((typeof(screen)=="undefined")?"":
 screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
 ";"+Math.random()+
 "' alt='' "+
-"border=0 width=88 height=31><\/a>")//--></script><a href="http://www.liveinternet.ru/click" target="_blank"><img src="http://counter.yadro.ru/hit?t14.1;r;s800*600*24;uhttps%3A//web.archive.org/web/20081217055933id_/http%253A//www.lavaplace.com/%253Fpage%253Dprivacy_policy;0.17500190993337483" alt="" border="0" width="88" height="31"></a><!--/LiveInternet-->
+"border=0 width=88 height=31><\/a>")//--></script><a href="http://www.liveinternet.ru/click" target="_blank"><img src="http://counter.yadro.ru/hit?t14.1;r;s800*600*24;uhttps%3A//web.archive.org/web/20090616195138id_/http%253A//www.lavaplace.com/%253Fpage%253Dprivacy_policy;0.6573738404519596" alt="" border="0" width="88" height="31"></a><!--/LiveInternet-->
 </p>
 	</div> <!-- footer //-->
 </div> <!-- gWrapper //-->
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
-<script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-3329346-1");
-pageTracker._initData();
-pageTracker._trackPageview();
-</script>
+
 
 
 </body></html>
