--- a/p/pa/pay/paysimple.com.html
+++ b/p/pa/pay/paysimple.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the paysimple.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216020309id_/http%3A//www.paysimple.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the paysimple.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616201920id_/http%3A//www.paysimple.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head>
 <link rel="SHORTCUT ICON" href="http://www.paysimple.com/image/ps.ico">
@@ -80,56 +80,61 @@ s.hier1=""
 <div id="wrap">
     <div id="nav">
         <div class="navLeft">
-    		<a href="http://www.paysimple.com/"><img src="/image/nav_logo.gif" alt="PaySimple Electronic Payment Processing"></a>
+    		<a href="http://www.paysimple.com/"><img src="/image/nav_logo.gif" alt="PaySimple Online Payment Processing"></a>
         </div><!--End navLeft-->
         <div class="navMid">
         	<div class="navTop">
-            	<img src="/image/arrow.gif"><a href="/client.html">client login</a>        	</div>
+				<p style="font-size:16px;">
+				<img src="/image/arrow.gif" alt="bullet"><a style="font-size:10px" href="/client.html">client login</a>
+            	<img src="/image/arrow.gif" style="margin-left:20px" alt="bullet"><a style="font-size:10px" href="/contact.html">contact us</a>      	
+				<img src="/image/arrow.gif" style="margin-left:20px" alt="bullet"><strong> 1-800-466-0992</strong></p> 
+				</div>
    	    <!--End NavTop-->
             <div class="clear"></div>
             <div class="navBottom">
             	<ul>
                 	<li id="features"><a href="/products.html">Features</a></li>
                     <li id="pricing"><a href="/pricing.html">Pricing</a></li>
-                    <li id="demos"><a href="/demo.html">Demos</a></li>
-                    <li id="openAccount"><a href="/order.html">Getting Started</a></li>
+                    <li id="demos"><a href="/demo.html">Demo</a></li>
+                    <li id="openAccount"><a href="javascript:redirectToSimpleSignUp();">Get Started</a></li>
 				</ul>
         	</div><!--End NavBottom-->
         </div><!--End navMid-->
         <div class="navRight">
-        	<img src="/image/phone.gif" alt="Call 1-800-466-0992 to Speak with a Payments Specialist">
+			
+        	<a href="javascript:redirectToSimpleSignUp();"><img style="margin-left:34px" src="/image/btn_nav_try_paysimple.gif" alt="Try PaySimple"></a>
         </div>
 	</div><!--End Nav--><div id="content">
 <div class="colThree">
 <h1>Privacy</h1>
-<p>This Privacy Policy applies to our collection of information from visitors  of the PaySimple&nbsp; and registered  customers of PaySimple.&nbsp; </p>
+<p>This Privacy Policy applies to our collection of information from visitors  of the PaySimple.com website, the PaySimple.biz website, and registered  customers of PaySimple.&nbsp; </p>
 <h5>Collection of Personally Identifiable Information:</h5>
-<p>We collect personally identifiable information from you when you set up an  account with PaySimple.&nbsp; You do not need  to set up an account in order to view the PaySimple , but you must be  registered to use the PaySimple payment processing application.</p>
+<p>We collect personally identifiable information from you when you set up an  account with PaySimple.&nbsp; You do not need  to set up an account in order to view the PaySimple.com website, but you must be  registered to use the PaySimple payment processing application.</p>
 <p>PaySimple does not sell, share, or in any other way transmit personally  identifiable information (names, address, phone numbers, etc.) submitted by  non-registered users to any other persons or companies.&nbsp; </p>
-<p>Although we currently do not have a parent company, any subsidiaries, joint  ventures, or other companies under common control with us (collectively,  “Affiliates”), we may in the future.&nbsp; You  hereby agree that we may share some or all of your personally identifiable  information with these Affiliates.&nbsp; We  will require our Affiliates to comply with this Privacy Policy.</p>
-<p>We may use your contact information to send you promotional products and  information on behalf of our partner companies. <br>
-  We may provide your personally identifiable information to third party  service providers and referral partners that work on behalf of or with us to provide some of the  aspects of our services and to help us communicate with you.&nbsp; However, these service providers and referral partners do not have  any independent right to disclose this information (accept to the same extent  we would have a right to disclose that information under this policy).</p>
+<p>Although we currently do not have a parent company, subsidiaries, joint  ventures, or other companies under common control with us (collectively,  “Affiliates”), we may in the future.&nbsp; You  hereby agree that we may share some or all of the personally identifiable  information of non-registered users with these Affiliates.&nbsp; We  will require our Affiliates to comply with this Privacy Policy.</p>
+<p>We may use contact information from non-registered users to send promotional products and  information about PaySimple and/or on behalf of our partner companies. <br>
+  We may provide your personally identifiable information to third party  service providers and referral partners that work on behalf of or with us to provide some of the  aspects of our services and to help us communicate with you.&nbsp; However, these service providers and referral partners do not have  any independent right to disclose this information (except to the same extent  we would have a right to disclose that information under this policy).</p>
 <p>If our company or our assets are acquired by another company, that company  will possess the personally identifiable information collected by us.</p>
 <h5>Registered PaySimple Account Holders:</h5>
-<p>Our site requires you to give us contact information (name, address, phone  number, and e-mail address) and billing information. We use your contact  information to verify your identity, send you messages about your transaction  or our company. We use your billing and financial information (bank account  numbers) to facilitate payments through the PaySimple system and collect fees  if applicable. </p>
+<p>Our site requires you to give us contact information (name, address, phone  number, and e-mail address) and billing information. We use your contact  information to verify your identity, send you messages about your transaction  or our company. We use your billing and financial information (bank account  numbers) to facilitate payments through the PaySimple system and collect fees  if applicable. Personally identifiable information submitted as part of the application process for a PaySimple account and for third party ACH and Credit Card merchant accounts is shared with the merchant account provider solely for the purpose of underwriting and subsequent transaction processing, billing, and account maintenance.</p>
 <h5>Use of Demographic and Profile Data:</h5>
-<p>In our efforts to continually improve our product and service offerings, we  collect and analyze demographic and profile data about our users' activity on  our website. We identify and use your IP address to help diagnose problems with  our server, and to administer our website. Your IP address is also used to help  identify you and to gather broad demographic information. We will occasionally  ask you to complete optional online surveys. These surveys may ask you for  contact information and demographic information (like zip code, age or income  level). We use this data to tailor your experience at our site, providing you  with content that we think you might be interested in -- and to display content  according to your preferences. We sometimes use contact data from our surveys  to send you information about our company and/or promotional material on behalf  of our partners.</p>
+<p>In our efforts to continually improve our product and service offerings, we  collect and analyze demographic and profile data about our users' activity on  our website. We identify and use your IP address to help diagnose problems with  our server, and to administer our website. Your IP address, along with cookies, are used to help identify you and gather basic information. We will occasionally  ask you to complete optional online surveys. These surveys may ask you for  contact information and demographic information (like zip code, age or income  level). We use this data to tailor your experience at our site, providing you  with content that we think you might be interested in -- and to display content  according to your preferences. We sometimes use contact data from our surveys  to send you information about our company and/or promotional material on behalf  of our partners.</p>
 <p>We may create anonymous records from personally identifiable information by  excluding information (such as your name) that make the information personally  identifiable to you or one of your customers.&nbsp;  We may use this anonymous information to analyze usage patterns so that  we may enhance our services, and we reserve the right to use, and disclose  anonymous information to third parties, in our discretion.</p>
 <h5>Security</h5>
 <p>This site has security measures in place to protect against the loss, misuse  and alteration of the information under our control, as described in our <a href="http://www.paysimple.com/security.html">security page</a>. </p>
 <h5>Disclosure of Information</h5>
-<p>We may disclose data about you to governmental and law enforcement  authorities if we are required to do so or if we think the disclosure is  appropriate; and you authorize these disclosures. We may also disclose data  about you in connection with actual or potential lawsuits, (a) if we are  required to do so, (b) if such disclosures may potentially mitigate our  liability, or (c) to enforce our rights.</p>
+<p>We may disclose data about you to governmental and law enforcement  authorities if we are required to do so or if we think the disclosure is  appropriate; and you authorize these disclosures. We may also disclose data about you in connection with actual or potential lawsuits or suspected fraudulent activity, (a) if we are required to do so, (b) if such disclosures may potentially mitigate our liability, or (c) to enforce our rights.</p>
 <h5>Choice/Opt-Out</h5>
 <p>You may opt-out of receiving marketing communications from us and our  partners by following the opt out instructions we include in such  communications.&nbsp; </p>
 <h5>Change/Modify</h5>
 <p>This site gives users the following options for changing and modifying  information previously provided.&nbsp; Send an  email to PaySimple at <a href="mailto:webmaster@paysimple.com">webmaster@paysimple.com</a> for changes or modifications.</p>
 <h5>Contacting the Website</h5>
-<p>If you have any questions about this Privacy Policy, the practices of this  site, or your dealings with this , you can contact:<br>
-  Lisa Hephner<br>
+<p>If you have any questions about this Privacy Policy, the practices of this  site, or your dealings with PaySimple, please contact us at:<br>
+  PaySimple<br>
   1433 17th St, Suite 300<br>
   Denver, CO 80202<br>
-  303-800-0579<br>
-  <a href="mailto:lisa@paysimple.com">lisa@paysimple.co</a></p>
+  P: 800-466-0992<br>
+  E: <a href="mailto:guide@paysimple.com">guide@paysimple.com</a></p>
 <h5>&nbsp;</h5>
 </div></div>
    <div class="clear"></div>
@@ -143,7 +148,6 @@ s.hier1=""
 		<a href="/press.html">press</a>
 		<a href="/case_studies.html">case studies</a>
 		<a href="/small-business-resource/index.html">Small Business Resources</a>
-		<a href="/partners/">partners</a>
 		<a href="/security.html">security</a>
 		<a href="/contact.html">contact</a>
 		<a href="/blog/" style="border-right:none;">blog</a>	</div><!--End footCase-->
@@ -172,9 +176,9 @@ s.hier1=""
 			<a href="/privacy.html">Privacy</a>
 			<a href="/sitemap.html">Site Map </a>
 			<a href="/aup.html">Acceptable Use Policy </a>
-		<span>&nbsp;© Copyright PaySimple, 2008.</span>
+		<span>Copyright © PaySimple 2005 - 2009.</span>
 		<p>Contact <a href="mailto:webmaster@paysimple.com" style="margin-right:0px;">webmaster@paysimple.com</a> if you have problems with this site.<br>
-        PaySimple is a registered ISO in association with First National Bank of Omaha, Omaha, Nebraska.</p>
+        PaySimple is a registered ISO/MSP in association with First National Bank of Omaha, Omaha, Nebraska.</p>
 
 	</div><!--End sideOne-->
 	<div class="sideTwo">
@@ -203,9 +207,11 @@ var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "htt
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
 <script type="text/javascript">
+try{
 var pageTracker = _gat._getTracker("UA-1387783-2");
-pageTracker._initData();
+pageTracker._setDomainName(".paysimple.com");
 pageTracker._trackPageview();
+} catch(err) {}
 </script>
 
 
