--- a/t/te/tes/tesco.net.html
+++ b/t/te/tes/tesco.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tesco.net privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217065635id_/http%3A//www.tesco.net/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tesco.net privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616202319id_/http%3A//www.tesco.net/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xml:lang="en-gb" xmlns="http://www.w3.org/1999/xhtml"><head>	
 	<title>Welcome to Tesco.net</title>
@@ -32,7 +32,7 @@
 				  <li class="menu1"><a href="http://www.tesco.com/telecoms">Telecoms home</a></li>
 				  <li class="menu2"><a href="http://www.tescomobile.com/">Tesco Mobile network</a></li>
 				  <li class="menu3"><a href="http://www.tescohomephone.com">Home phone</a></li>
-				  <li class="menu4"><a href="https://register.tesco.net/online">Internet access</a></li>
+				  <li class="menu4"><a href="http://www.tesco.com/broadband/">Broadband</a></li>
 				  <li class="menu5"><a href="http://www.tescointernetphone.com/talkwifi">Internet Phone/ Talk Wi-fi</a></li>
 				  <li class="menu6"><a href="http://direct.tesco.com/homepage/phones.aspx">Pay as you go mobiles</a></li>
 				  <li class="menu7"><a href="http://www.tescocontractmobilephones.com/">Contract mobiles</a></li>
@@ -54,7 +54,7 @@
 
 					
 						<p><label for="q" class="access">Search</label> <input type="text" name="q" value="" class="fullSearchBar" id="q" onkeydown="if((this.className!='fullSearchBar') &amp;&amp; (this.value == 'What for')){this.value='';} this.style.color='black';" onclick="if(this.value=='What for'){this.value='';} this.style.color='black';"></p>
-						<p><label for="near" class="access">Near to</label> <input type="text" name="near" value="Where" class="access" id="near" onkeydown="if(this.value=='Where'){this.value='';} this.style.color='black';" onclick="if(this.value=='Where'){this.value='';} this.style.color='black';"></p>
+						<p><label for="near" class="access">Near to</label> <input type="text" name="near" value="" class="access" id="near" onkeydown="if(this.value=='Where'){this.value='';} this.style.color='black';" onclick="if(this.value=='Where'){this.value='';} this.style.color='black';"></p>
 					
 
 				<p class="b"><input type="image" src="/images/search2.gif"></p>
