--- a/g/gl/gla/glaryutilities.com.html
+++ b/g/gl/gla/glaryutilities.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the glaryutilities.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217041250id_/http%3A//www.glaryutilities.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the glaryutilities.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616202342id_/http%3A//www.glaryutilities.com/privacy.html) for the most accurate reproduction.-->
 
 <html><!-- InstanceBegin template="/Templates/product.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -49,7 +49,8 @@
 	<ul>
 	<li onmouseover="this.className='mouseover'" onmouseout="this.className=''"><a href="/gu.html">Glary Utilities</a></li>
 	<li onmouseover="this.className='mouseover special'" onmouseout="this.className='special'" class="special"><a href="/gup.html">Glary Utilities Pro</a></li></ul>
-</div></div><a href="#">Products</a> </div></td>
+</div></div>
+<a href="#">Products</a> </div></td>
         <td width="100" onmouseover="this.className='navover'" onmouseout="this.className=''"><div class="menu" onmouseover="Menu2.style.display='block'" style="" onmouseout="Menu2.style.display='none'">
 <div class="menusub0">
 <div id="Menu2" class="menusub1">
@@ -137,10 +138,10 @@
     
     
   <tbody><tr>
-    <td width="800" height="39" colspan="2" align="left" valign="middle" background="/images/topbk.jpg"><table width="100%" border="0" cellspacing="0" cellpadding="0" class="topright">
+    <td width="800" height="39" colspan="2" align="left" valign="middle" background="/images/topbk2.jpg"><table width="100%" border="0" cellspacing="0" cellpadding="0" class="topright">
       <tbody><tr>
         <td><a href="/aboutus.html">About Us </a> | <a href="/press.html">Press Room </a></td>
-        <td align="right"><span class="graytext">© 2005-2008 Glarysoft Ltd. All Rights Reserved. </span> <a href="/privacy.html" class="CR">Privacy Policy</a> | <a href="/legal.html" class="CR">Legal Notice</a></td>
+        <td align="right"><span class="graytext">© 2005-2009 Glarysoft Ltd. All Rights Reserved. </span> <a href="/privacy.html" class="CR">Privacy Policy</a> | <a href="/legal.html" class="CR">Legal Notice</a></td>
       </tr>
     </tbody></table></td>
     </tr>
@@ -151,8 +152,30 @@
 </script>
 <script type="text/javascript">
 _uacct = "UA-292892-4";
-urchinTracker();
+if( document.referrer )
+{
+ urchinTracker(document.referrer);
+}
+else
+{
+ urchinTracker();
+}
 </script> 
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-7622269-1";
+if( document.referrer )
+{
+ urchinTracker(document.referrer);
+}
+else
+{
+ urchinTracker();
+}
+</script> 
+
 
 <!-- InstanceEnd -->
 </body></html>
